2002-10-18  Gary Thomas  <gthomas@ecoscentric.com>

	* ecos.db: Change package name for TS1000 flash part (consistency).

	* NEWS: Add note about Allied Telesyn TS1000 port.

2002-10-15  Iztok Zupet <iz@vsr.si>

	* pkgconf/rules.doc: modified for pdf target

2002-09-23  Mark Salter  <msalter@redhat.com>

	* ecos.db: Change XScale core dirname to "cores".

2002-09-19  Mark Salter  <msalter@redhat.com>

	* ecos.db: Add XScale core package.

2002-09-03  Gary Thomas  <gary@mlbassoc.com>

	* ecos.db: Adding generic FEC driver support package (Viper).
	Add Allied Telesyn TS1000 platform.

2002-08-27  Bart Veer  <bartv@ecoscentric.com>

	* ecos.db: remove packages SDL and SMPEG that were never released.

2002-08-15  Andrew Lunn  <andrew.lunn@ascom.ch>

	* ecos.db: Added the CPU load measurement package.

2002-08-14  Yoshinori Sato  <qzb04471@nifty.ne.jp>

	* ecos.db: Add H8/300H watchdog driver package.

2002-08-07  Andrew Lunn  <andrew.lunn@ascom.ch>

	* ecos.db: Added CRC package.

2002-08-07  Gary Thomas  <gthomas@ecoscentric.com>

	* pkgconf/rules.doc: The location of the various stylesheets, etc,
	is quite varied.  Made some changes to let it work on a Debian system,
	but this should definitely be revisited.

2002-08-06  Jonathan Larmour  <jifl@ecoscentric.com>

	* ecos.db: Include AT91 watchdog driver in at91 target.

2002-08-06  Thomas Koeller  <thomas@koeller.dyndns.org>

	* ecos.db: Add AT91 watchdog driver.

2002-06-20  Gary Thomas  <gary@chez-thomas.org>

	* ecos.db: A&M Viper now uses generic AMD FLASH drivers.

2002-05-08  Jesper Skov  <jskov@redhat.com>

	* ecos.db: Removed special SH2 SCIF driver. The changes have been
	merged into the SH3 (now generic SH) driver.
	
2002-04-24  Yoshinori Sato  <qzb04471@nifty.ne.jp>

	* ecos.db: Add H8/300 serial driver.

2002-04-25  Bob Koninckx  <bob.koninckx@mech.kuleuven.ac.be>

	* ecos.db: Add ports to Wuerz Elektronik and Axiom Manufacturing
	MPC555 based eval boards.
